--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: Helvetica, sans-serif;
 }
 #image{
     width: 200px;
@@ -36,7 +37,7 @@
     margin: 20px;
     padding-left: 50px;
 }
-a{
+.menu a{
     text-decoration: none;
     color: white;
     margin: 0 10px;
@@ -44,7 +45,7 @@ a{
     border-radius: 5px;
     padding: 2px 10px;
 }
-a:hover{
+.menu a:hover{
     cursor: pointer;
     background-color: rgb(57, 55, 55);
 }
@@ -91,6 +92,91 @@ th{
 td:first-child{
     color: black;
 }
+/* Login and Signup */
+.indexpage{
+    display: flex;
+    flex-wrap: wrap;
+    height: 85vh;
+    justify-content: space-around;
+    align-items: center;
+    background-image: url('background.jpg');
+    background-size: cover;
+}
+.card{
+    width: 40vw;
+    height: 60vh;
+    border-radius: 10px;
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: lightgrey;
+}
+.heading{
+    padding: 5px;
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+    width: 90%;
+    text-align: center;
+    border-bottom: 1px solid gray;
+}
+.outerdiv{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 85%;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.box{
+    width: 80%;
+}
+.btnbox{
+    display: flex;
+    justify-content: center;
+}
+label{
+    font-size: 1.2rem;
+}
+input{
+    width: 90%;
+    padding: 3px;
+    outline: none;
+    font-size: 1rem;
+    height: 1.3rem;
+    margin: 5px 0 0 0;
+}
+p>a{
+    color: black;
+    font-size: 0.8rem;
+    text-decoration: none;
+    position: relative;
+    left: 70px;
+    top: -10px;
+}
+#passtext{
+    position: relative;
+    top: -15px;
+    width: 110%;
+    color: red;
+    font-size: 0.8rem;
+}
+button{
+    padding: 7px;
+    font-size: 1rem;
+    font-weight: 600;
+    min-width: 50%;
+    color: white;
+    background-color: black;
+    border-radius: 7px;
+    border: none;
+    position: relative;
+    top: -20px;
+}
+button:hover , input:hover{
+    cursor: pointer;
+}
+
 /* Reponsive design css */
 
 @media only screen and (max-width: 600px) {
@@ -116,11 +202,11 @@ td:first-child{
         padding: 8px;
         display: flex;
         align-items:center;
-        justify-content: space-evenly;
+        justify-content: space-around;
         
     }
-    a{
-        font-size: 1rem;
+    .menu a{
+        font-size: 0.9rem;
         padding: 2px 2px;
         margin: 0;
     }
@@ -128,6 +214,9 @@ td:first-child{
         height: 91vh;
         background-image: url('background.jpg');
         background-size: contain;
+    }
+    .welcome h1{
+        font-size: 2rem;
     }
     .mainouter{
         background-color: antiquewhite;
@@ -138,5 +227,31 @@ td:first-child{
     }
     table{
         margin: 2px;
+    }
+    .indexpage{
+        display: flex;
+        height: auto;
+        flex-direction: column;
+    }
+    .card{
+        width: 70vw;
+        margin: 20px;
+        height: auto;
+    }
+    p>a{
+        color: black;
+        font-size: 0.8rem;
+        text-decoration: none;
+        position: relative;
+        left: 10px;
+    }
+    button{
+        top: -10px;
+    }
+    .heading{
+        font-size: 1rem;
+    }
+    .menu h1{
+        font-size: 1rem;
     }
   }
