--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     font-family: Helvetica, sans-serif;
 }
+body{
+    background-image: url('background.jpg');
+}
 #image{
     width: 200px;
     overflow: hidden;
@@ -21,7 +24,10 @@
     border-radius: 50%;
     margin-right: 50px;
 }
+/*  Student page */
 .main{
+    border: 1px solid black;
+    border-radius: 15px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -62,7 +68,6 @@ p{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('background.jpg');
     background-size: cover;
 }
 #welcomelogo{
@@ -99,12 +104,11 @@ td:first-child{
     height: 85vh;
     justify-content: space-around;
     align-items: center;
-    background-image: url('background.jpg');
     background-size: cover;
 }
 .card{
-    width: 40vw;
-    height: 60vh;
+    width: 40%;
+    height: 60%;
     border-radius: 10px;
     border: 2px solid black;
     display: flex;
@@ -176,6 +180,55 @@ button{
 button:hover , input:hover{
     cursor: pointer;
 }
+/* Monthly activities */
+#monthly{
+    width: 50%;
+    margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.monthlybox{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+.monthlyform{
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    width: 40%;
+    height: fit-content;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: aliceblue;
+}
+.monthlyform button{
+    position: relative;
+    top: 0;
+    width: 50%;
+    margin: auto;
+    margin-top: 10px;
+}
+
+#monthly .activities{
+    padding: 10px;
+    margin: 10px;
+    width: 250px;
+    height: fit-content;
+    border-radius: 10px;
+    background-color: white;
+    border: 1px solid black;
+}
+.activities h2,h3{
+    margin: 10px;
+    font-size: 1.2rem;
+    border-bottom: 1px solid;
+}
+.activities p{
+    font-size: 1rem;
+    margin: 5px;
+}
+
 
 /* Reponsive design css */
 
@@ -191,8 +244,8 @@ button:hover , input:hover{
         border-radius: 50%;
     }
     #logo{
-        width: 30px;
-        height: 30px;
+        width: 35px;
+        height: 35px;
         border-radius: 50%;
         margin-right: 10px;
     }
@@ -206,37 +259,42 @@ button:hover , input:hover{
         
     }
     .menu a{
-        font-size: 0.9rem;
+        font-size: 0.8rem;
         padding: 2px 2px;
         margin: 0;
     }
     .welcome{
-        height: 91vh;
-        background-image: url('background.jpg');
-        background-size: contain;
+        height: 70vh;
     }
     .welcome h1{
         font-size: 2rem;
     }
     .mainouter{
+        margin: 100px 10px;
         background-color: antiquewhite;
-        height: 91vh;
+        height: 70vh;
     }
+    .stud-info{
+        padding-left: 20px;
+    }
+    /* Time Table */
     table,th ,tr{
         font-size: 8px;
     }
     table{
         margin: 2px;
     }
+
+    /* Index page */
     .indexpage{
+        margin-top: 30px;
         display: flex;
         height: auto;
         flex-direction: column;
     }
     .card{
-        width: 70vw;
+        width: 80%;
         margin: 20px;
-        height: auto;
     }
     p>a{
         color: black;
@@ -252,6 +310,16 @@ button:hover , input:hover{
         font-size: 1rem;
     }
     .menu h1{
-        font-size: 1rem;
+        font-size: 1.2rem;
+        position: relative;
+        left: -55px;
+    }
+    /* Task page */
+    .monthlyform{
+        width: 100%;
+    }
+    #monthly{
+        width: auto;
+        justify-content: center;
     }
   }
