--- a/style.css
+++ b/style.css
@@ -27,16 +27,17 @@ body{
 /*  Student page */
 .main{
     border: 1px solid black;
+    margin: 20px 50px ;
     border-radius: 15px;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: antiquewhite;
 }
 .mainouter{
-    background-color: antiquewhite;
-    height: 85vh;
+    height: 80vh;
 }
 
 .stud-info{
@@ -65,10 +66,20 @@ p{
 .welcome{
     display: flex;
     height: 85vh;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-size: cover;
+    z-index: -1;
+}
+#extra{
+    position: absolute;
+    display: flex;
+    top: 40px;
+    flex-wrap: wrap;
+    height: 100%;
+    width: 100%;
 }
 #welcomelogo{
     width: 300px;
@@ -76,8 +87,10 @@ p{
     border: 1px solid black;
     border-radius: 50%;
 }
+
 h1{
-    font-size: 40px;
+    font-size: 50px;
+    margin-top: 20px;
 }
 
 /* Time table CSS */
@@ -108,7 +121,7 @@ td:first-child{
 }
 .card{
     width: 40%;
-    height: 60%;
+    height: fit-content;
     border-radius: 10px;
     border: 2px solid black;
     display: flex;
@@ -175,7 +188,7 @@ button{
     border-radius: 7px;
     border: none;
     position: relative;
-    top: -20px;
+    top: -10px;
 }
 button:hover , input:hover{
     cursor: pointer;
@@ -210,7 +223,7 @@ button:hover , input:hover{
     margin-top: 10px;
 }
 
-#monthly .activities{
+.activities{
     padding: 10px;
     margin: 10px;
     width: 250px;
@@ -228,8 +241,14 @@ button:hover , input:hover{
     font-size: 1rem;
     margin: 5px;
 }
-
-
+/* Extra Acitivity page */
+.extrabox{
+    width: 100vw;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 /* Reponsive design css */
 
 @media only screen and (max-width: 600px) {
@@ -269,9 +288,11 @@ button:hover , input:hover{
     .welcome h1{
         font-size: 2rem;
     }
+    .main{
+        margin: 5px 5px 20px 5px;
+        width: fit-content;
+    }
     .mainouter{
-        margin: 100px 10px;
-        background-color: antiquewhite;
         height: 70vh;
     }
     .stud-info{
@@ -321,5 +342,16 @@ button:hover , input:hover{
     #monthly{
         width: auto;
         justify-content: center;
+    }
+    .extrabox{
+        position: relative;
+        top: -100px;
+        margin: 20px;
+        width: auto;
+
+    }
+    #extra{
+        justify-content: center;
+        top: 30px;
     }
   }
