--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     font-family: Helvetica, sans-serif;
 }
+.userontop{
+    font-size: 2rem;
+}
 body{
     background-image: url('background.jpg');
 }
@@ -78,7 +81,7 @@ p{
     display: flex;
     top: 40px;
     flex-wrap: wrap;
-    height: 100%;
+    height: fit-content;
     width: 100%;
 }
 #welcomelogo{
@@ -88,10 +91,15 @@ p{
     border-radius: 50%;
 }
 
-h1{
+.headingh1{
+    display: flex;
+    align-items: center;
     font-size: 50px;
     margin-top: 20px;
+    padding: 10px;
+    justify-content: space-between;
 }
+
 
 /* Time table CSS */
 table,th,td{
